plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.vaadin' version '24.9.11'
}

group = 'com.gladysz'
version = '0.0.1-SNAPSHOT'
description = 'KidsParty Manager UI'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('vaadinVersion', "24.9.11")
}

dependencies {
    developmentOnly 'com.vaadin:vaadin-dev'
    implementation 'com.vaadin:vaadin-spring-boot-starter'
    implementation('org.springframework.boot:spring-boot-starter-validation')
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
